# libro-fm-chapter-assigner

./: CLAUDE.md  pyproject.toml
.claude/: settings.json
src/libro_assigner/: cli.py  extractor.py  gui.py  scorer.py  toc.py  types.py  writer.py
