[project]
name = "libro-assigner"
version = "0.1.0"
description = "Assign chapter names to Libro.fm audiobook files"
readme = "README.md"
authors = [
    { name = "Bryce Lunceford", email = "bryceadam1@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.1",
    "openai-whisper>=20240930",
]

[project.scripts]
libro-assign = "libro_assigner.cli:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
